[package]
name = "rc-hashmap"
version = "0.1.0"
edition = "2021"
description = "A HashMap with reference-counted key-value entries."
license = "Apache-2.0"
readme = "README.md"
keywords = ["hashmap", "rc", "reference-counted", "shared", "data-structures"]
categories = ["data-structures"]
documentation = "https://docs.rs/rc-hashmap"

[lib]
path = "src/lib.rs"

[dependencies]
slotmap = "1"
hashbrown = { version = "0.16" }
getrandom = { version = "0.2", optional = true }
wyhash = { version = "0.6.0", optional = true }
xxhash-rust = { version = "0.8.12", default-features = false, features = ["xxh3"], optional = true }

[dev-dependencies]
criterion = "0.7"
proptest = "1"
rand_pcg = "0.3"
rand_core = "0.6"

[features]
default = ["wyhash-hash"]
# Choose exactly one of these default hasher features
random-state-hash = []
wyhash-hash = ["wyhash", "getrandom"]
xxh3-hash = ["xxhash-rust", "getrandom"]

[[bench]]
name = "rc_hashmap_bench"
harness = false

[[bench]]
name = "handle_hashmap_bench"
harness = false

[[bench]]
name = "counted_hashmap_bench"
harness = false
